updated controller to handle undefined query results

--- a/client/app/allGoogle/allGoogle.html
+++ b/client/app/allGoogle/allGoogle.html
@@ -15,8 +15,8 @@
   <div ng-switch-when="false" ng-include="'app/allGoogle/singleTrend.html'"</div>
 </div> -->
 
-<div class="container">
-  <div class="col-md-12">
+<!-- <div class="container">
+  <div class="col-md-12"> -->
 <!--     <h1>Trending Topics</h1>
     <div ng-repeat="trend in trendsArr">
       <h3 ng-click="google.getNews(trend)"><a>{{ trend.property1.text }}</a></h3>
