--- a/client/app/allGoogle/transition.html
+++ b/client/app/allGoogle/transition.html
@@ -13,3 +13,16 @@
 <!--     </div>
   </div>
 </header> -->
+<!-- <header class="navbar navbar-bright navbar-fixed-top" role="banner">
+  <div class="container">
+    <div class="navbar-header">
+    </div>
+  </div>
+</header>
+<div class="container" id="transitionContainer">
+  <div id="transitionDiv">
+      <h1>Loading...</h1>
+  </div>
+</div>
+<footer id="transitionFooter">
+</footer> -->
