both sentiment analyses fully functional

--- a/client/app/allGoogle/displayTrends.html
+++ b/client/app/allGoogle/displayTrends.html
@@ -73,7 +73,7 @@
                 <h3 ng-click="google.getNews(trend)">{{$index + 1}}. {{ trend.property1.text }}</h3>
                 <div class="row">
                   <div class="col-xs-9">
-                  <h4><span ng-lick="google.getNews(trend)" class="label label-default">{{ trend.property2 }} searches</span></h4><h4>
+                  <h4><span ng-click="google.getNews(trend)" class="label label-default">{{ trend.property2 }} searches</span></h4><h4>
                 <!--   <button style="font-family:courier,'new courier';" ng-click="getTwitter(trend)" class="text-muted">Twitter</a></button>
                   </h4> -->
                   </div> <!-- col-xs-9 -->
