--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -72,7 +72,17 @@
   <div>
 </div>
 
-<div>
+
+  <nvd3-scatter-chart
+      data="exampleData4"
+        id="showLegendExample"
+        width="550"
+        height="300"
+        showLegend="true">
+          <svg></svg>
+    </nvd3-scatter-chart>
+<
+<!-- <div>
   <nvd3-multi-bar-horizontal-chart
       data="exampleData"
         id="exampleId"
@@ -88,7 +98,7 @@
         >
       <svg></svg>
     </nvd3-multi-bar-horizontal-chart>
-</div>
+</div> -->
 
 
 <!-- <div>
