--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,8 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
     <link rel="stylesheet" href="app/app.css">
+    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
       <!-- injector:css -->
  <!--      <link rel="stylesheet" href="components/PageLoadingEffects/css/component.css">
       <link rel="stylesheet" href="components/PageLoadingEffects/css/demo.css">
