--- a/client/app/allGoogle/displayTrends.html
+++ b/client/app/allGoogle/displayTrends.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
 <!--       <a href="/allGoogle" class="navbar-brand">Home</a> -->
-      <p><a ng-click="setDisplay()" style="font-family: 'Open Sans'">Home</a></p>
+      <p><a ng-click="setDisplay()">Home</a></p>
 <!--     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
@@ -73,7 +73,7 @@
                 <h3 ng-click="google.getNews(trend)">{{$index + 1}}. {{ trend.property1.text }}</h3>
                 <div class="row">
                   <div class="col-xs-9">
-                  <h4><span ng-click="google.getNews(trend)" class="label label-default label-search">{{ trend.property2 }} searches</span></h4>
+                  <h4><span style="font-family: 'Open Sans' "ng-click="google.getNews(trend)" class="label-search">{{ trend.property2 }} searches</span></h4>
                   </div> <!-- col-xs-9 -->
                   <div class="col-xs-3">
                   </div> <!-- col-xs-3 -->
@@ -91,9 +91,6 @@
 
 <footer class="footer">
   <div class="container">
-    <a href="http://twitter.com/lijaimie"><img src="../../assets/images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-    <a href="#"><img src="../../assets/images/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-    <!-- special syntax is an HTML entity that makes the copyright symbol -->
-    <p>&copy; 2014 Jaimie Li</p>
+    <p>Jaimie Li &copy; 2014</p>
   </div>
 </footer>
