--- a/client/app/allGoogle/singleTrend.html
+++ b/client/app/allGoogle/singleTrend.html
@@ -277,9 +277,6 @@
 
 <footer class="footer">
   <div class="container">
-    <a href="http://twitter.com/lijaimie"><img src="../../assets/images/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-    <a href="#"><img src="../../assets/images/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
-    <!-- special syntax is an HTML entity that makes the copyright symbol -->
-    <p>&copy; 2014 Jaimie Li</p>
+    <p>Jaimie Li &copy; 2014</p>
   </div>
 </footer>
