--- a/client/app/allGoogle/displayTrends.html
+++ b/client/app/allGoogle/displayTrends.html
@@ -61,7 +61,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12" id="displayPanel">
       <div class="panel">
         <div class="panel-body">
           <div ng-repeat="trend in trendsArr">
