small styling tweaks

--- a/client/app/allGoogle/singleTrend.html
+++ b/client/app/allGoogle/singleTrend.html
@@ -1,16 +1,16 @@
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
   <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+    <!-- <div class="navbar-header"> -->
+     <!--  <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
+      </button> -->
       <p><a ng-click="setDisplay(true)" style="background: none; border: none; margin-top: 10px; font-family: 'Open Sans'">Home</a></p>
 <!--       <a href="/allGoogle" class="navbar-brand">Home</a> -->
 <!--       <button ng-click="stopStream()">Stop Stream</button> -->
-    </div>
+<!--     </div> -->
   </div>
 </header>
 
@@ -23,7 +23,7 @@
         </h1>
       </div>
       <div class="col-md-6">
-        <div style="height: 195px"class="well well-lg">
+        <div class="well well-lg" id="twitter">
           <div class="row">
             <div class="col-sm-12">
               <ul>
