--- a/client/app/allGoogle/displayTrends.html
+++ b/client/app/allGoogle/displayTrends.html
@@ -1,12 +1,12 @@
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
   <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+
+      <!-- <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
-      </button>
+      </button> -->
 <!--       <a href="/allGoogle" class="navbar-brand">Home</a> -->
       <p><a ng-click="setDisplay()">Home</a></p>
 <!--     </div>
@@ -27,7 +27,7 @@
       </ul>
     </nav>
   </div> -->
-    </div>
+
   </div>
 </header>
 
